@@ -2,6 +2,7 @@ Version 2.3
 ???, 2011
 
 New features, enhancements:
+  * Integrated Appirater to prompt users to rate the app.
 
 Version 2.2
 March 6, 2011
